[package]
name = "robot-arm"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy_egui = "0.38.0"
bevy_math = "0.17.3"
bevy_transform_gizmo = { git = "https://github.com/Exobody/bevy_transform_gizmo.git", dev = "61929b0caab14136890b53cb60575b80cffe7789"}
egui_plot = "0.34.0"
strum = { version = "0.27.2", features = ["derive"] }
